--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="sidebar">Sidebar</div>
+      <div class="header">Header</div>
+      <div class="main-content">Main Content</div>
+    </div>
+  </body>
 </html>
