--- a/index.html
+++ b/index.html
@@ -9,8 +9,95 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">Sidebar</div>
+      <div class="sidebar">
+        <div class="sidebar__branding-section">
+          <img
+            class="branding-section__logo"
+            src="assets/icons/dashboard.svg"
+            alt="Logo"
+          />
+          <p class="branding-section__title">Dashboard</p>
+        </div>
+
+        <div class="sidebar__navigation-section">
+          <button class="navigation-section__button">
+            <img
+              src="assets/icons/home.svg"
+              alt="Home icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Home</p>
+          </button>
+          <button class="navigation-section__button">
+            <img
+              src="assets/icons/profile.svg"
+              alt="Profile icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Profile</p>
+          </button>
+          <button class="navigation-section__button">
+            <img
+              src="assets/icons/messages.svg"
+              alt="Messages icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Messages</p>
+          </button>
+          <button class="navigation-section__button">
+            <img
+              src="assets/icons/history.svg"
+              alt="History icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">History</p>
+          </button>
+          <button class="navigation-section__button">
+            <img
+              src="assets/icons/tasks.svg"
+              alt="Tasks icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Tasks</p>
+          </button>
+          <button class="navigation-section__button">
+            <img
+              src="assets/icons/communities.svg"
+              alt="Communities icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Communities</p>
+          </button>
+        </div>
+
+        <div class="sidebar__navigation-section">
+          <button class="navigation-section__button">
+            <img
+              src="assets/icons/settings.svg"
+              alt="Settings icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Settings</p></button
+          ><button class="navigation-section__button">
+            <img
+              src="assets/icons/support.svg"
+              alt="Support icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Support</p></button
+          ><button class="navigation-section__button">
+            <img
+              src="assets/icons/privacy.svg"
+              alt="Privacy icon"
+              class="navigation-section__button__icon"
+            />
+            <p class="navigation-section__button__text">Privacy</p>
+          </button>
+        </div>
+      </div>
+
       <div class="header">Header</div>
+
       <div class="main-content">Main Content</div>
     </div>
   </body>
