--- a/index.html
+++ b/index.html
@@ -96,7 +96,57 @@
         </div>
       </div>
 
-      <div class="header">Header</div>
+      <div class="header">
+        <div class="header__searchbar">
+          <img
+            src="assets/icons/search.svg"
+            alt="Search bar icon"
+            class="searchbar__icon"
+          />
+          <input
+            class="searchbar__input"
+            id="search"
+            type="search"
+            name="search"
+          />
+        </div>
+
+        <div class="header__user-info">
+          <button class="user-info__button">
+            <img
+              class="user-info__button__icon"
+              src="assets/icons/bell.svg"
+              alt="Bell icon"
+            />
+          </button>
+          <img
+            src="https://picsum.photos/id/1015/200"
+            alt="Avatar"
+            class="user-info__avatar"
+          />
+          <p class="user-info__username">Morgan Oakley</p>
+        </div>
+
+        <div class="header__user-info header__user-info--left-aligned">
+          <img
+            src="https://picsum.photos/id/1015/200"
+            alt="Avatar"
+            class="user-info__avatar user-info__avatar--big"
+          />
+          <div>
+            <p class="user-info__greeting">Hi there,</p>
+            <p class="user-info__username user-info__username--big">
+              Morgan Oakley (@morgan)
+            </p>
+          </div>
+        </div>
+
+        <div class="header__buttons">
+          <button class="header__button">New</button>
+          <button class="header__button">Upload</button>
+          <button class="header__button">Share</button>
+        </div>
+      </div>
 
       <div class="main-content">Main Content</div>
     </div>
