Add Main Content

--- a/index.html
+++ b/index.html
@@ -148,7 +148,341 @@
         </div>
       </div>
 
-      <div class="main-content">Main Content</div>
+      <div class="main-content">
+        <div class="main-content__item">
+          <h2 class="main-content__item__title">Your Projects</h2>
+          <div class="projects">
+            <div class="card project-card">
+              <div class="project-card__border"></div>
+              <div>
+                <h3 class="project-card__title">Super Cool Project</h3>
+                <p class="project-card__content">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum
+                  cumque ipsum placeat repellat hic recusandae eius
+                  necessitatibus asperiores illum dignissimos aspernatur, minus
+                  quod libero expedita explicabo?
+                </p>
+              </div>
+
+              <div class="project-card__buttons">
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/star-plus-outline.svg"
+                    alt="Favorites icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/eye-plus-outline.svg"
+                    alt="Follow icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/share-variant-outline.svg"
+                    alt="Share icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+              </div>
+            </div>
+
+            <div class="card project-card">
+              <div class="project-card__border"></div>
+              <div>
+                <h3 class="project-card__title">Less Cool Project</h3>
+                <p class="project-card__content">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
+                  officia ipsa pariatur voluptas consequuntur assumenda quas
+                  maiores ducimus est esse, veritatis, minima itaque odio
+                  molestias non autem expedita amet inventore quasi neque
+                  tempore rerum earum aliquid officiis? At facere quos fuga enim
+                  eos, aperiam dolore quod debitis! Velit, fuga recusandae?
+                </p>
+              </div>
+              <div class="project-card__buttons">
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/star-plus-outline.svg"
+                    alt="Favorites icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/eye-plus-outline.svg"
+                    alt="Follow icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/share-variant-outline.svg"
+                    alt="Share icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+              </div>
+            </div>
+
+            <div class="card project-card">
+              <div class="project-card__border"></div>
+              <div>
+                <h3 class="project-card__title">Impossible App</h3>
+                <p class="project-card__content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae laudantium magnam maxime veniam. Nam autem
+                  accusantium delectus, vel cupiditate mollitia, incidunt vero
+                </p>
+              </div>
+
+              <div class="project-card__buttons">
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/star-plus-outline.svg"
+                    alt="Favorites icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/eye-plus-outline.svg"
+                    alt="Follow icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/share-variant-outline.svg"
+                    alt="Share icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+              </div>
+            </div>
+
+            <div class="card project-card">
+              <div class="project-card__border"></div>
+              <div>
+                <h3 class="project-card__title">Easy Peasy App</h3>
+                <p class="project-card__content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Asperiores minima, quam quod facilis rem exercitationem rerum
+                  sapiente perferendis sit recusandae? Eum quidem illum autem
+                  illo molestias
+                </p>
+              </div>
+              <div class="project-card__buttons">
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/star-plus-outline.svg"
+                    alt="Favorites icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/eye-plus-outline.svg"
+                    alt="Follow icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/share-variant-outline.svg"
+                    alt="Share icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+              </div>
+            </div>
+
+            <div class="card project-card">
+              <div class="project-card__border"></div>
+              <div>
+                <h3 class="project-card__title">Ad Blocker</h3>
+                <p class="project-card__content">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi
+                  consequuntur aspernatur fuga deleniti enim iusto, reiciendis
+                </p>
+              </div>
+              <div class="project-card__buttons">
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/star-plus-outline.svg"
+                    alt="Favorites icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/eye-plus-outline.svg"
+                    alt="Follow icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/share-variant-outline.svg"
+                    alt="Share icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+              </div>
+            </div>
+
+            <div class="card project-card">
+              <div class="project-card__border"></div>
+              <div>
+                <h3 class="project-card__title">Money Maker</h3>
+                <p class="project-card__content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Facilis consectetur, eaque provident repudiandae eius dolorem
+                  beatae natus in reiciendis ipsum rem autem molestias pariatur
+                </p>
+              </div>
+              <div class="project-card__buttons">
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/star-plus-outline.svg"
+                    alt="Favorites icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/eye-plus-outline.svg"
+                    alt="Follow icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+                <button class="project-card__button">
+                  <img
+                    src="assets/icons/share-variant-outline.svg"
+                    alt="Share icon"
+                    class="project-card__button__icon"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main-content__item">
+          <h2 class="main-content__item__title">Announcements</h2>
+          <div class="announcements">
+            <div class="card announcements-card">
+              <div class="announcements-card__item">
+                <h2 class="announcements-card__item__title">
+                  Site Maintenance
+                </h2>
+                <p class="announcements-card__item__content">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
+                  illum non reiciendis et similique veritatis error fugit labore
+                  pariatur sed.
+                </p>
+              </div>
+              <hr class="announcements-card__divider" />
+              <div class="announcements-card__item">
+                <h2 class="announcements-card__item__title">
+                  Community Share Day
+                </h2>
+                <p class="announcements-card__item__content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                  et molestiae natus esse ut, saepe voluptatibus, nemo deleniti
+                  tenetur corporis nam neque ab laudantium placeat!
+                </p>
+              </div>
+              <hr class="announcements-card__divider" />
+              <div class="announcements-card__item">
+                <h2 class="announcements-card__item__title">
+                  Updated Privacy Policy
+                </h2>
+                <p class="announcements-card__item__content">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Perferendis iusto eveniet eum vero velit error culpa officia,
+                  aliquam soluta tempora ad eos ullam cum ipsam tempore, modi
+                  suscipit officiis, quos incidunt expedita veritatis dolor
+                  nobis ex. Id commodi delectus dolores?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main-content__item">
+          <h2 class="main-content__item__title">Trending</h2>
+          <div class="trending">
+            <div class="card trending-card">
+              <div class="trending-card__item">
+                <img
+                  src="https://picsum.photos/id/100/200"
+                  alt="User avatar"
+                  class="trending-card__item__user-avatar"
+                />
+                <div class="trending-card__item__user-info">
+                  <h3 class="trending-card__item__user-info__username">
+                    @tegan
+                  </h3>
+                  <p class="trending-card__item__user-info__project-name">
+                    World Peace Builder
+                  </p>
+                </div>
+              </div>
+
+              <div class="trending-card__item">
+                <img
+                  src="https://picsum.photos/id/1015/200"
+                  alt="User avatar"
+                  class="trending-card__item__user-avatar"
+                />
+                <div class="trending-card__item__user-info">
+                  <h3 class="trending-card__item__user-info__username">
+                    @morgan
+                  </h3>
+                  <p class="trending-card__item__user-info__project-name">
+                    Super Cool Project
+                  </p>
+                </div>
+              </div>
+
+              <div class="trending-card__item">
+                <img
+                  src="https://picsum.photos/id/1002/200"
+                  alt="User avatar"
+                  class="trending-card__item__user-avatar"
+                />
+                <div class="trending-card__item__user-info">
+                  <h3 class="trending-card__item__user-info__username">
+                    @kendall
+                  </h3>
+                  <p class="trending-card__item__user-info__project-name">
+                    Life Changing App
+                  </p>
+                </div>
+              </div>
+
+              <div class="trending-card__item">
+                <img
+                  src="https://picsum.photos/id/1016/200"
+                  alt="User avatar"
+                  class="trending-card__item__user-avatar"
+                />
+                <div class="trending-card__item__user-info">
+                  <h3 class="trending-card__item__user-info__username">
+                    @alex
+                  </h3>
+                  <p class="trending-card__item__user-info__project-name">
+                    No Traffic Maker
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
